--- a/browser/extensions/newtab/css/nova/activity-stream.css
+++ b/browser/extensions/newtab/css/nova/activity-stream.css
@@ -334,10 +334,7 @@ body {
   background-position: var(--newtab-wallpaper-backgroundPosition);
   background-attachment: fixed;
   background-image: var(--newtab-wallpaper, ""), linear-gradient(to right, var(--newtab-wallpaper-color, ""), var(--newtab-wallpaper-color, ""));
-}
-
-.no-scroll {
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 h1,
@@ -3750,26 +3747,55 @@ dialog:dir(rtl)::after {
   position: fixed;
   inset-block-end: calc(var(--button-size-icon) + var(--space-xxlarge) + var(--space-small));
   inset-inline-end: var(--space-xlarge);
+  appearance: none;
   border: 0;
-  background: none;
-  z-index: 4;
   border-radius: var(--border-radius-small);
-}
-.discoverystream-admin-toggle .icon-devtools {
   background-color: var(--button-background-color, rgba(21, 20, 26, 0.07));
-  background-image: url("chrome://global/skin/icons/developer.svg");
-  background-size: var(--icon-size-medium);
   box-shadow: 0 0.8px 1.6px 0 rgba(58, 57, 68, 0.2);
-  padding: calc(5 * var(--space-xsmall));
+  padding: calc(5 * var(--space-xxsmall));
+  z-index: 4;
+  display: flex;
+  align-items: center;
+}
+.lightWallpaper .discoverystream-admin-toggle, .darkWallpaper .discoverystream-admin-toggle {
+  background-color: var(--newtab-weather-background-color);
+}
+@media (prefers-contrast) {
+  .lightWallpaper .discoverystream-admin-toggle, .darkWallpaper .discoverystream-admin-toggle {
+    background-color: var(--background-color-box);
+  }
+}
+.discoverystream-admin-toggle:hover {
+  background-color: var(--newtab-button-static-hover-background);
+}
+.discoverystream-admin-toggle:active {
+  background-color: var(--newtab-button-static-active-background);
+}
+.discoverystream-admin-toggle:focus-visible {
+  border: 0;
+  outline: var(--focus-outline);
+  background-color: var(--newtab-button-static-active-background);
 }
 .discoverystream-admin-toggle:dir(rtl) {
   transform: scaleX(-1);
 }
-.discoverystream-admin-toggle:hover {
-  background: var(--newtab-element-hover-color);
+.discoverystream-admin-toggle > div {
+  width: var(--icon-size-medium);
+  height: var(--icon-size-medium);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
 }
-.discoverystream-admin-toggle.expanded {
-  background: rgba(0, 0, 0, 0.2);
+.discoverystream-admin-toggle > div > img {
+  -moz-context-properties: fill;
+  display: inline-block;
+  color: var(--icon-color);
+  fill: currentColor;
+  height: 100%;
+  object-fit: contain;
+  vertical-align: middle;
+  width: 100%;
 }
 
 .discoverystream-admin {
